Fix letter spacing

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -201,8 +201,7 @@ div {
         font-size: 2.5rem;
         color: $red;
         font-family: $font-secondary;
-        letter-spacing: -0.1rem;
-        word-spacing: -0.2rem;
+        letter-spacing: -0.08rem;
         span {
           color: $gray;
           font-size: 1.8rem;
